# Variant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: score.yml
data/: tickers.csv
docs/: ARCHITECTURE.md
examples/: AAPL.txt  META.txt  NVDA.txt  PLTR.txt  TSLA.txt  XOM.txt
results/: scoring_log.csv
results/evaluations/2026-03-29/: analysis_summary.csv
tests/: test_news.py  test_reverse_dcf.py  test_sanity_checks.py  test_scoring.py
variant/: config.py  evaluate.py  graph.py  main.py  state.py
variant/nodes/: analyst.py  financial_data.py  hypothesis_generator.py  news.py  stubs.py  synthesis.py
variant/prompts/: analyst.py  hypothesis_generator.py  synthesis.py
variant/tools/: ddg_search.py  tavily_search.py  yfinance_tools.py
